# zkvm-pairings

./: Cargo.toml  out
field/: Cargo.toml
field/src/: fp.rs  fp12.rs  fp2.rs  fp6.rs  fr.rs  lib.rs  utils.rs
src/: affine.rs  common.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fr.rs  g1.rs  g2.rs  lib.rs  pairings.rs  precompute.rs  scalar.rs  utils.rs  witness.rs
