[package]
name = "zkvm-pairings"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
ff = "0.13.0"
num-bigint = "0.4.6"
rand = "0.8.5"
rand_core = "0.6.4"
rang = "0.1.1"
subtle = "2.6.1"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "bhargav/fp-precompile" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1", branch = "bhargav/fp-precompile" }
